--- a/package.json
+++ b/package.json
@@ -11,61 +11,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~12.0.2",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/animations": "9.1.13",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "9.1.13",
+    "@angular/compiler": "9.1.13",
+    "@angular/core": "9.1.13",
+    "@angular/flex-layout": "9.0.0-beta.31",
+    "@angular/forms": "9.1.13",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/router": "9.1.13",
     "@ng-select/ng-select": "^4.0.0",
     "angular-calendar": "^0.28.16",
     "bootstrap": "^4.3.1",
     "browserslist": "^4.16.6",
     "caniuse-lite": "^1.0.30001061",
+    "core-js": "^3.0.0",
     "date-fns": "^2.14.0",
     "jquery": "^3.4.1",
     "jw-angular-pagination": "^1.1.0",
     "mat-video": "^2.8.1",
     "moment": "^2.27.0",
-    "ng-pick-datetime": "^7.0.0",
-    "ng-zorro-antd": "^8.5.2",
+    "ng-pick-datetime-ex": "^9.0.9",
+    "ng-zorro-antd": "^9.3.0",
     "ng2-datepicker": "^3.1.1",
     "ng2-file-upload": "^1.4.0",
     "ng2-search-filter": "^0.5.1",
-    "ngx-bootstrap": "^5.2.0",
+    "ngx-bootstrap": "^5.0.0",
     "ngx-pagination": "^5.0.0",
     "popper.js": "^1.16.0",
     "primeicons": "^4.1.0",
-    "primeng": "^12.0.0-rc.1",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "primeng": "^9.0.0",
+    "query-string": "^6.12.0",
+    "querystring": "^0.2.1",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "^0.900.7",
+    "@angular/cli": "9.0.0-rc.7",
+    "@angular/compiler-cli": "9.1.13",
+    "@angular/language-service": "~7.0.0",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~6.0.1",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "tslint": "~5.11.0",
+    "typescript": "~3.6"
   }
 }
- 
